--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 
     implementation 'androidx.webkit:webkit:1.4.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation libs.androidx.preference
 //    implementation libs.annotation
 //    implementation libs.lifecycle.livedata.ktx
 //    implementation libs.lifecycle.viewmodel.ktx
