--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,13 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        
+    - name: Bump version and push tag
+        id: bump
+        uses: anothrNick/github-tag-action@v1 # Don't use @master or @v1 unless you're happy to test the latest version
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
+          WITH_V: false
 
     - name: 打包
       run: |
@@ -33,3 +40,4 @@ jobs:
       with:
         files: |
           app/build/outputs/apk/ci/**/*.*
+        tag_name: ${{ steps.bump.outputs.new_tag }}
